@@ -89,6 +89,7 @@ The following people are not part of the development team, but have been contrib
 * Hudson Oliveira (hdpoliveira) - Misc.
 * Jim Verheijde (Jimver) - Make handymen less likely to get stuck in queue lines, misc.
 * Helio Batimarqui (batimarqui) - Misc.
+* Keith Stellyes - Misc.
 
 ## Bug fixes
 * (halfbro)
