@@ -3891,6 +3891,10 @@ enum
     STR_CANT_RAISE_ELEMENT_HERE = 6388,
     STR_NO_CLEARANCE = 6389,
 
+    STR_NEEDS_RCT2_FILES = 6390,
+    STR_PICK_RCT2_DIR = 6391,
+    STR_COULD_NOT_FIND_AT_PATH = 6392
+
     // Have to include resource strings (from scenarios and objects) for the time being now that language is partially working
     /* MAX_STR_COUNT = 32768 */ // MAX_STR_COUNT - upper limit for number of strings, not the current count strings
 };
